# dummyetc

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  configure.ac  dummyetc.conf  dummyetc.spec
debian/: changelog  control  copyright
