#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# Copyright (c) 2014 Mitsutoshi NAKANO <bkbin005@rinku.zaq.ne.jp>
# License: GPL-3.0

AC_PREREQ([2.69])
AC_INIT([dummyetc], [0], [bkbin005@rinku.zaq.ne.jp])
AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
